DuPont DevSB/src/objects/ccrz__E_ShippingRate__c.object
<CustomObject>
    <description>Shipping options/rates table</description>
    <fields>
        <fullName>ccrz__Air__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Air required</description>
        <label>Air</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default shipping option</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Ground__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ground shipping required</description>
        <label>Ground</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__MaxWeight__c</fullName>
        <label>Max Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__MinWeight__c</fullName>
        <label>Min Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__NextDayAir__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Day Air</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>To display Shipping Methods in Ascending Order</description>
        <inlineHelpText>To display Shipping Methods in Ascending Order</inlineHelpText>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Shipper__c</fullName>
        <label>Shipper</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShippingRateId__c</fullName>
        <externalId>true</externalId>
        <label>ShippingRateId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__ShippingRate__c</fullName>
        <label>Shipping Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Shipping Rate</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Shipping Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Shipping Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>